SOLeAIParser.py
# Generated from SOLeAI.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SOLeAIParser ( Parser ):

    grammarFileName = "SOLeAI.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'='", "'if'", "'('", "')'", 
                     "'->'", "'messageText'", "'messageImage'", "'messageAudio'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "STRING", "COMMENT_STRING", 
                      "ALPHANUM", "NEWLINE", "WHITESPACE" ]

    RULE_prog = 0
    RULE_sorb = 1
    RULE_block = 2
    RULE_statement = 3
    RULE_comment = 4
    RULE_varAssignment = 5
    RULE_value = 6
    RULE_ifBlock = 7
    RULE_pipeStream = 8
    RULE_function = 9
    RULE_inputData = 10
    RULE_functionName = 11
    RULE_varName = 12

    ruleNames =  [ "prog", "sorb", "block", "statement", "comment", "varAssignment", 
                   "value", "ifBlock", "pipeStream", "function", "inputData", 
                   "functionName", "varName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    STRING=11
    COMMENT_STRING=12
    ALPHANUM=13
    NEWLINE=14
    WHITESPACE=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SOLeAIParser.EOF, 0)

        def sorb(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOLeAIParser.SorbContext)
            else:
                return self.getTypedRuleContext(SOLeAIParser.SorbContext,i)


        def getRuleIndex(self):
            return SOLeAIParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = SOLeAIParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 30482) != 0):
                self.state = 26
                self.sorb()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(SOLeAIParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SorbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(SOLeAIParser.StatementContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SOLeAIParser.NEWLINE)
            else:
                return self.getToken(SOLeAIParser.NEWLINE, i)

        def block(self):
            return self.getTypedRuleContext(SOLeAIParser.BlockContext,0)


        def getRuleIndex(self):
            return SOLeAIParser.RULE_sorb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSorb" ):
                listener.enterSorb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSorb" ):
                listener.exitSorb(self)




    def sorb(self):

        localctx = SOLeAIParser.SorbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sorb)
        self._la = 0 # Token type
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 34
                    self.match(SOLeAIParser.NEWLINE)
                    self.state = 39
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 40
                self.statement()
                self.state = 42 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 41
                        self.match(SOLeAIParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 44 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 46
                    self.match(SOLeAIParser.NEWLINE)
                    self.state = 51
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 52
                self.block()
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 53
                        self.match(SOLeAIParser.NEWLINE) 
                    self.state = 58
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sorb(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOLeAIParser.SorbContext)
            else:
                return self.getTypedRuleContext(SOLeAIParser.SorbContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SOLeAIParser.NEWLINE)
            else:
                return self.getToken(SOLeAIParser.NEWLINE, i)

        def getRuleIndex(self):
            return SOLeAIParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SOLeAIParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(SOLeAIParser.T__0)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 30482) != 0):
                self.state = 64
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 62
                    self.sorb()
                    pass

                elif la_ == 2:
                    self.state = 63
                    self.match(SOLeAIParser.NEWLINE)
                    pass


                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(SOLeAIParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varAssignment(self):
            return self.getTypedRuleContext(SOLeAIParser.VarAssignmentContext,0)


        def ifBlock(self):
            return self.getTypedRuleContext(SOLeAIParser.IfBlockContext,0)


        def pipeStream(self):
            return self.getTypedRuleContext(SOLeAIParser.PipeStreamContext,0)


        def comment(self):
            return self.getTypedRuleContext(SOLeAIParser.CommentContext,0)


        def getRuleIndex(self):
            return SOLeAIParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SOLeAIParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.varAssignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.ifBlock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.pipeStream()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.comment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT_STRING(self):
            return self.getToken(SOLeAIParser.COMMENT_STRING, 0)

        def getRuleIndex(self):
            return SOLeAIParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = SOLeAIParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(SOLeAIParser.COMMENT_STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varName(self):
            return self.getTypedRuleContext(SOLeAIParser.VarNameContext,0)


        def value(self):
            return self.getTypedRuleContext(SOLeAIParser.ValueContext,0)


        def pipeStream(self):
            return self.getTypedRuleContext(SOLeAIParser.PipeStreamContext,0)


        def getRuleIndex(self):
            return SOLeAIParser.RULE_varAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarAssignment" ):
                listener.enterVarAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarAssignment" ):
                listener.exitVarAssignment(self)




    def varAssignment(self):

        localctx = SOLeAIParser.VarAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.varName()
            self.state = 80
            self.match(SOLeAIParser.T__2)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 81
                self.value()
                pass

            elif la_ == 2:
                self.state = 82
                self.pipeStream()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SOLeAIParser.STRING, 0)

        def varName(self):
            return self.getTypedRuleContext(SOLeAIParser.VarNameContext,0)


        def getRuleIndex(self):
            return SOLeAIParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = SOLeAIParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_value)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(SOLeAIParser.STRING)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.varName()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(SOLeAIParser.ValueContext,0)


        def pipeStream(self):
            return self.getTypedRuleContext(SOLeAIParser.PipeStreamContext,0)


        def statement(self):
            return self.getTypedRuleContext(SOLeAIParser.StatementContext,0)


        def block(self):
            return self.getTypedRuleContext(SOLeAIParser.BlockContext,0)


        def getRuleIndex(self):
            return SOLeAIParser.RULE_ifBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlock" ):
                listener.enterIfBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlock" ):
                listener.exitIfBlock(self)




    def ifBlock(self):

        localctx = SOLeAIParser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(SOLeAIParser.T__3)
            self.state = 90
            self.match(SOLeAIParser.T__4)
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 91
                self.value()
                pass

            elif la_ == 2:
                self.state = 92
                self.pipeStream()
                pass


            self.state = 95
            self.match(SOLeAIParser.T__5)
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 8, 9, 10, 12, 13]:
                self.state = 96
                self.statement()
                pass
            elif token in [1]:
                self.state = 97
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipeStreamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOLeAIParser.FunctionContext)
            else:
                return self.getTypedRuleContext(SOLeAIParser.FunctionContext,i)


        def inputData(self):
            return self.getTypedRuleContext(SOLeAIParser.InputDataContext,0)


        def getRuleIndex(self):
            return SOLeAIParser.RULE_pipeStream

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipeStream" ):
                listener.enterPipeStream(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipeStream" ):
                listener.exitPipeStream(self)




    def pipeStream(self):

        localctx = SOLeAIParser.PipeStreamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pipeStream)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 100
                self.function()
                pass
            elif token in [8, 9, 10]:
                self.state = 101
                self.inputData()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 104
                self.match(SOLeAIParser.T__6)
                self.state = 105
                self.function()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionName(self):
            return self.getTypedRuleContext(SOLeAIParser.FunctionNameContext,0)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOLeAIParser.ValueContext)
            else:
                return self.getTypedRuleContext(SOLeAIParser.ValueContext,i)


        def getRuleIndex(self):
            return SOLeAIParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = SOLeAIParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.functionName()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11 or _la==13:
                self.state = 112
                self.value()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputDataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SOLeAIParser.RULE_inputData

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputData" ):
                listener.enterInputData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputData" ):
                listener.exitInputData(self)




    def inputData(self):

        localctx = SOLeAIParser.InputDataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_inputData)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALPHANUM(self):
            return self.getToken(SOLeAIParser.ALPHANUM, 0)

        def getRuleIndex(self):
            return SOLeAIParser.RULE_functionName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionName" ):
                listener.enterFunctionName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionName" ):
                listener.exitFunctionName(self)




    def functionName(self):

        localctx = SOLeAIParser.FunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(SOLeAIParser.ALPHANUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALPHANUM(self):
            return self.getToken(SOLeAIParser.ALPHANUM, 0)

        def getRuleIndex(self):
            return SOLeAIParser.RULE_varName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarName" ):
                listener.enterVarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarName" ):
                listener.exitVarName(self)




    def varName(self):

        localctx = SOLeAIParser.VarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_varName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SOLeAIParser.ALPHANUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





